2007-08-13  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/patterns/Latn-en.error.conf:
	* data/patterns/Latn-en.error.in:
	* data/patterns/Latn.error.conf:
	* data/patterns/Latn.error.in:
	* data/patterns/Zyyy.error.conf:
	* data/patterns/Zyyy.error.in:
	New files for common error patterns.

	* tools/generate-pattern-conf:
	New script to generate pattern configuration XML files.

2007-08-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER):
	Call gaupol.util.shell_quote on Windows paths.

	* gaupol/__init__.py:
	Import gaupol.temp.

	* gaupol/temp.py:
	New module for creating and removing temporary files in such a manner
	that they can succesfully be removed on Windows as well.

	* gaupol/agents/preview.py:
	* gaupol/agents/save.py:
	* gaupol/gtk/agents/preview.py:
	* gaupol/unittest/case.py:
	Use gaupol.temp instead of tempfile.mkstemp and os.remove.

2007-08-11  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER):
	Use %PROGRAMFILES% environment variable.

	* gaupol/gtk/agents/preview.py (preview):
	Catch OSError along with IOError.
	Use gobject.timeout_add to check process state.

2007-08-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/util.py (path_to_uri, uri_to_path):
	Fix to work on Windows.

2007-08-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/const.py (VIDEO_PLAYER):
	Use absolute quoted paths on Windows.

	* gaupol/gtk/agents/preview.py (preview):
	Do not call gobject.child_watch_add on Windows.

	* gaupol/gtk/renderers/multiline.py (do_start_editing):
	Sync editor's font to renderer's to fix a Windows bug.

	* gaupol/util.py:
	(browse_url): Do not use os.startfile on Windows.
	(start_process): Do not use shell on Windows.

2007-08-08  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* data/gaupol.gtk.conf.spec:
	Change default values of edit.use_custom_font and
	preview.use_custom to False.

2007-08-07  Osmo Salomaa  <otsaloma@cc.hut.fi>

	* gaupol/gtk/assistants/text/__init__.py:
	Fix module docstring.
